<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingTop="10dp"
    tools:context=".modules.movies_fragment.presentation.view.MoviesListFragment">

    <ImageButton
        android:id="@+id/navigation_menu_image_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navigation_menu_image_button_description"
        android:src="@drawable/icon_navigation_menu_movies_list_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/search_image_button"
        app:layout_constraintStart_toEndOf="@id/navigation_menu_image_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_image_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search_icon_image_description"
        android:src="@drawable/icon_search_movies_list_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/search_edittext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:autofillHints="name"
        android:background="@color/black"
        android:drawableStart="@drawable/icon_search_movies_list_fragment"
        android:hint="@string/search_your_movie_hint_edittext"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/navigation_menu_image_button"
        app:layout_constraintEnd_toEndOf="@id/search_image_button"
        app:layout_constraintStart_toStartOf="@id/navigation_menu_image_button"
        app:layout_constraintTop_toTopOf="@id/navigation_menu_image_button" />


    <FrameLayout
        android:id="@+id/view_recyclerview_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_menu_image_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/views_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingVertical="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </FrameLayout>


    <include
        android:id="@+id/placeholder_no_movies"
        layout="@layout/placeholder_no_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_menu_image_button" />


    <include
        android:id="@+id/placeholder_no_internet"
        layout="@layout/placeholder_no_internet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_menu_image_button" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>